<resources>
    <string name="search_food">Поиск рецептов еды</string>
    <string name="popular_order">Популярные заказы</string>
    <string name="show_all">Показать все</string>
    <string name="name_food">Чизбургер</string>
    <string name="name_firm">KFC</string>
    <string name="like">320 Лайков</string>
    <string name="comment">47 Отзывов</string>
    <string name="home">Дом</string>
    <string name="history">История</string>
    <string name="bascket">Корзина</string>
    <string name="profil">Профиль</string>
    <string name="app_name">FoodAgregator</string>
    <string name="Pizza">ПИЦЦА</string>
    <string name="Susci">СУШИ</string>
    <string name="Burger">БУРГЕРЫ</string>
    <string name="drink">НАПИТКИ</string>
    <string name="recent_news">Пеперонни</string>
    <string name="in_food">Пицца на тонком тесте с помидорами и колбасой</string>
    <string name="publish_date">24.10.19</string>
    <string name="Peper">Пицца на тонком тесте,......</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
